# crud-service

./: .clang-format  CMakeLists.txt  Makefile
configs/: config_dev.yaml  dynamic_config.json
include/api/: create.hpp  delete.hpp  read.hpp  update.hpp
src/: main.cpp
src/api/: create.cpp  delete.cpp  read.cpp  update.cpp
